<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for a crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="crime_police_label">Police required</string>
    <string name="crime_requires_police">Contact Police</string>
    <string name="last_button">Last Page</string>
    <string name="first_button">First Page</string>
    <string name="empty_view">There are no crimes</string>
    <string name="date_picker_title">Date of crime:</string>
    <string name="time_picker_title">Time of crime:</string>
    <string name="new_crime">New Crime</string>
    <string name="remove_crime">Remove Crime</string>
    <string name="show_subtitle">Show subtitle</string>
    <string name="hide_subtitle">Hide subtitle</string>
    <plurals name="subtitle_plural">
        <item quantity="one">%1$d crime</item>
        <item quantity="other">%1$d crimes</item>
    </plurals>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is unsolved</string>
    <string name="crime_report_no_suspect">There is no suspect.</string>
    <string name="crime_report_suspect">The suspect is %s</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send report via</string>
    <string name="call_suspect_label">Call Suspect</string>
    <string name="call_suspect_set">Call %s</string>
    <string name="crime_photo_button_description">Take photo of crime scene</string>
    <string name="crime_photo_no_image_description">Crime scene photo (not set)</string>
    <string name="crime_photo_image_description">Crime scene photo (set)</string>
    <string name="crime_date_set_description">Date of crime (set)</string>
    <string name="crime_date_no_description">Choose date of the crime (not set)</string>
    <string name="crime_time_no_description">Choose time of the crime (not set)</string>
    <string name="crime_time_set_description">Time of crime (set)</string>
    <string name="crime_suspect_no_description">Choose suspect (not set)</string>
    <string name="crime_suspect_set_description">Suspect (set)</string>


</resources>
